user management for admins created and storage size adjust is working

--- a/NCloud/NCloud/Views/Admin/Index.cshtml
+++ b/NCloud/NCloud/Views/Admin/Index.cshtml
@@ -12,9 +12,9 @@
             <h3 class="fw-bold">Admin Dashboard</h3>
         </div>
         <div class="col-12 w-100 text-center">
-            <a asp-action="GenerateRegisterationUrl" asp-controller="Admin" class="btn btn-primary">
-                <span class="fw-bold align-middle mx-2">Generate Registration Url</span>
-                <img src="/utilities/user-add.svg" width="20" height="20" class="rounded align-middle">
+            <a asp-action="ManageUserAccounts" asp-controller="Admin" class="btn btn-primary">
+                <span class="fw-bold align-middle mx-2">Manage accounts</span>
+                <img src="/utilities/person-manage.svg" width="20" height="20" class="rounded align-middle">
             </a>
         </div>
     </div>
