--- a/NCloud/NCloud/Views/Admin/Index.cshtml
+++ b/NCloud/NCloud/Views/Admin/Index.cshtml
@@ -13,7 +13,7 @@
         </div>
         <div class="col-12 w-100 text-center">
             <a asp-action="ManageUserAccounts" asp-controller="Admin" class="btn btn-primary">
-                <span class="fw-bold align-middle mx-2">Manage accounts</span>
+                <span class="fw-bold align-middle mx-2">Manage Accounts</span>
                 <img src="/utilities/person-manage.svg" width="20" height="20" class="rounded align-middle">
             </a>
         </div>
