alignments and design changed for razor pages and error view

--- a/NCloud/NCloud/Areas/Identity/Pages/Error.cshtml
+++ b/NCloud/NCloud/Areas/Identity/Pages/Error.cshtml
@@ -2,22 +2,25 @@
 @model ErrorModel
 @{
     ViewData["Title"] = "Error";
+
+    string email = NCloud.ConstantData.Constants.Configuration.GetSection("EmailCredentials:Email").Value ?? String.Empty;
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<div class="row text-center">
+    <div class="w-100 justify-content-center text-center mb-3">
+        <img src="@(NCloud.ConstantData.Constants.Branding.LogoPath)" class="img-fluid" width="200" />
+    </div>
 
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
+    <h1 class="text-danger">Error.</h1>
+    <h2 class="text-danger">An error occurred while processing your request.</h2>
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
-</p>
+    @if (Model.ShowRequestId)
+    {
+        <p>
+            <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        </p>
+    }
+
+    <h3>Connection</h3>
+    <p>If you want to connect the creator for development purposes or error declaration write an email to : <a href="mailto:@(email)?subject=#@(NCloud.ConstantData.Constants.EmailIssue)">@email</a></p>
+</div>
