--- a/NCloud/NCloud/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/NCloud/NCloud/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -3,8 +3,12 @@
 @{
     ViewData["Title"] = "Forgot password confirmation";
 }
-
-<h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
+<div class="row text-center">
+    <div class="w-100 justify-content-center text-center mb-3">
+        <img src="@(NCloud.ConstantData.Constants.Branding.LogoPath)" class="img-fluid" width="200" />
+    </div>
+    <h1>@ViewData["Title"]</h1>
+    <p>
+        Please check your email to reset your password.
+    </p>
+</div>
