--- a/NCloud/NCloud/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/NCloud/NCloud/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,13 +9,10 @@
     }
 }
 
-<h1>Manage your account</h1>
-
 <div>
-    <h2>Change your account settings</h2>
-    <hr />
+    <h1 class="text-center border-2 border-bottom border-top border-secondary py-4">Manage your account</h1>
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 border-end border-2 border-secondary">
             <partial name="_ManageNav" />
         </div>
         <div class="col-md-9">
