--- a/NCloud/NCloud/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/NCloud/NCloud/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -4,10 +4,14 @@
     ViewData["Title"] = "Register confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
+<div class="row text-center">
+    <div class="w-100 justify-content-center text-center mb-3">
+        <img src="@(NCloud.ConstantData.Constants.Branding.LogoPath)" class="img-fluid" width="200" />
+    </div>
+    <h1>@ViewData["Title"]</h1>
 
-
-<p>
-    Please check your email to confirm your account <b>(@Model.Email)</b>.
-</p>
+    <p>
+        Please check your email to confirm your account <b>(@Model.Email)</b>.
+    </p>
+</div>
 
