--- a/NCloud/NCloud/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/NCloud/NCloud/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -3,8 +3,12 @@
 @{
     ViewData["Title"] = "Reset password confirmation";
 }
-
-<h1>@ViewData["Title"]</h1>
-<p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
-</p>
+<div class="row text-center">
+    <div class="w-100 justify-content-center text-center mb-3">
+        <img src="@(NCloud.ConstantData.Constants.Branding.LogoPath)" class="img-fluid" width="200" />
+    </div>
+    <h1>@ViewData["Title"]</h1>
+    <p>
+        Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
+    </p>
+</div>
