--- a/NCloud/NCloud/Views/Shared/Error.cshtml
+++ b/NCloud/NCloud/Views/Shared/Error.cshtml
@@ -1,25 +1,25 @@
 ﻿@model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
+
+    string email = NCloud.ConstantData.Constants.Configuration.GetSection("EmailCredentials:Email").Value ?? String.Empty;
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<div class="row text-center">
+    <div class="w-100 justify-content-center text-center mb-3">
+        <img src="@(NCloud.ConstantData.Constants.Branding.LogoPath)" class="img-fluid" width="200" />
+    </div>
 
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
+    <h1 class="text-danger">Error.</h1>
+    <h2 class="text-danger">An error occurred while processing your request.</h2>
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+    @if (Model.ShowRequestId)
+    {
+        <p>
+            <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        </p>
+    }
+
+    <h3>Connection</h3>
+    <p>If you want to connect the creator for development purposes or error declaration write an email to : <a href="mailto:@(email)?subject=#@(NCloud.ConstantData.Constants.EmailIssue)">@email</a></p>
+</div>
