--- a/NCloud/NCloud/Views/Editor/TextEditor.cshtml
+++ b/NCloud/NCloud/Views/Editor/TextEditor.cshtml
@@ -38,6 +38,9 @@
 @Html.AntiForgeryToken()
 
 @section Scripts {
+
+    <script type="text/javascript" src="/js/editor.js"></script>
+  
     <script type="text/javascript">
         tinymce.init({
             selector: '#texteditor',
@@ -58,12 +61,10 @@
                 
                 event.preventDefault();
 
-                UserSave('@Model.FilePath', window.editor.getValue(), '@Model.Encoding', '@Url.Action("SaveData", "Editor")');
-            }
+                UserSave('@Model.FilePath',tinymce.get('texteditor').getContent(),'@Model.Encoding','@Url.Action("SaveData", "Editor" )')            }
         });
     </script>
 
-    <script type="text/javascript" src="/js/editor.js"></script>
 
     <script type="text/javascript">
         setTimeout(async () => await PeriodicSave("@Model.FilePath", tinymce.get("texteditor").getContent(), "@Model.Encoding", "@Url.Action("SaveData", "Editor")"), TIMEOUTMS);
