space requests handling finished

--- a/NCloud/NCloud/Views/Shared/Components/CloudNotification/Notification.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/CloudNotification/Notification.cshtml
@@ -20,7 +20,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                 </div>
                 <div class="toast-body">
-                    @notification.Text
+                    @notification.Text !
                 </div>
             </div>
         }
