health checks added

--- a/NCloud/NCloud/Views/Admin/Index.cshtml
+++ b/NCloud/NCloud/Views/Admin/Index.cshtml
@@ -23,5 +23,17 @@
                 <img src="/utilities/database-manage-user-size.svg" width="20" height="20" class="rounded align-middle">
             </a>
         </div>
+        <div class="col-12 w-100 text-center my-3">
+            <a href="/CloudHealthCheck" class="btn btn-primary w-75">
+                <span class="fw-bold align-middle mx-2">Cloud Health</span>
+                <img src="/utilities/health.svg" width="20" height="20" class="rounded align-middle">
+            </a>
+        </div>
+        <div class="col-12 w-100 text-center my-3">
+            <a asp-action="Monitoring" asp-controller="Admin" class="btn btn-primary w-75">
+                <span class="fw-bold align-middle mx-2">Database Metrics</span>
+                <img src="/utilities/metrics.svg" width="20" height="20" class="rounded align-middle">
+            </a>
+        </div>
     </div>
 </div>
