--- a/NCloud/NCloud/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/NCloud/NCloud/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    if (ViewData.TryGetValue("ParentLayout", out var parentLayout) && parentLayout !=  null)
+    if (ViewData.TryGetValue("ParentLayout", out var parentLayout) && parentLayout != null)
     {
         Layout = parentLayout.ToString();
     }
@@ -9,6 +9,10 @@
     }
 }
 
+<div class="d-flex justify-content-between w-100 bg-primary rounded mb-3">
+    <a asp-action="UserPage" asp-controller="UserManagement" class="btn btn-primary"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+    <span class="btn"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded align-middle" /></span>
+</div>
 <div>
     <h1 class="text-center border-2 border-bottom border-top border-secondary py-4">Manage your account</h1>
     <div class="row">
