--- a/NCloud/NCloud/Views/CloudSpaceRequest/Create.cshtml
+++ b/NCloud/NCloud/Views/CloudSpaceRequest/Create.cshtml
@@ -8,6 +8,10 @@
     var sizes = Enum.GetValues<SpaceSizes>().Where(x => userSize < (long)x);
 }
 
+<div class="d-flex justify-content-between w-100 bg-primary rounded mb-3">
+    <a asp-action="UserPage" asp-controller="UserManagement" class="btn btn-primary"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+    <span class="btn"><img src="~/utilities/storage.svg" width=" 20" height="20" class="rounded align-middle" /></span>
+</div>
 <div class="my-5 text-center">
     <h2>Cloud Space Request</h2>
 </div>
