--- a/NCloud/NCloud/Views/Admin/Monitoring.cshtml
+++ b/NCloud/NCloud/Views/Admin/Monitoring.cshtml
@@ -1,10 +1,21 @@
 ﻿@model MonitorViewModel
 
+@{
+    ViewData["title"] = "Database Metrics";
+}
+
+<div class="d-flex justify-content-between w-100 bg-primary rounded mb-3">
+    <a asp-action="Index" asp-controller="Admin" class="btn btn-primary"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+    <span class="btn"><img src="~/utilities/metrics.svg" width=" 20" height="20" class="rounded align-middle" /></span>
+</div>
+
 <script src="/lib/d3/d3.v7.min.js"></script>
 
-<div id="my_dataviz"></div>
+<div class="d-flex w-100 justify-content-center mt-4">
+    <div id="my_dataviz"></div>
+</div>
 
-@section Scripts{
+@section Scripts {
     <script type="text/javascript">
 
         // Create 2 datasets
@@ -88,13 +99,3 @@
 
     </script>
 }
-@model MonitorViewModel
-
-@{
-    ViewData["title"] = "Database Metrics";
-}
-
-<div class="d-flex justify-content-between w-100 bg-primary rounded mb-3">
-    <a asp-action="Index" asp-controller="Admin" class="btn btn-primary"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
-    <span class="btn"><img src="~/utilities/metrics.svg" width=" 20" height="20" class="rounded align-middle" /></span>
-</div>
