--- a/NCloud/NCloud/Views/Admin/Monitoring.cshtml
+++ b/NCloud/NCloud/Views/Admin/Monitoring.cshtml
@@ -11,17 +11,26 @@
 
 <script src="/lib/d3/d3.v7.min.js"></script>
 
-<div class="d-flex w-100 justify-content-center mt-4">
-    <div id="my_dataviz"></div>
+<div class="my-5">
+    <h2>Last 30 days login frequency</h2>
+</div>
+<div class="d-flex w-100 justify-content-center my-5">
+    <div id="lineChart"></div>
 </div>
 
+<div class="my-5">
+    <h2>Last 7 days login frequency / hour</h2>
+</div>
+<div class="d-flex w-100 justify-content-center my-5">
+    <div id="heatMap"></div>
+</div>
+
+
 @section Scripts {
-    <script type="text/javascript">
+@*     <script type="text/javascript">
 
         // Create 2 datasets
-        var data1 = @Html.Raw(Json.Serialize(Model.LineGraphPoints));
-
-        console.log(data1)
+        let data1 = @Html.Raw(Json.Serialize(Model.LineGraphPoints));
 
         const mapperFunction = (d) => {
             return { x : d3.timeParse("%Y-%m-%d")(d.x), y : d.y }
@@ -29,15 +38,13 @@
 
         data1 = data1.map(mapperFunction)
 
-        console.log(data1);
-
         // set the dimensions and margins of the graph
-        var margin = { top: 10, right: 30, bottom: 30, left: 50 },
-            width = 700 - margin.left - margin.right,
-            height = 400 - margin.top - margin.bottom;
+        let margin = { top: 10, right: 30, bottom: 30, left: 50 },
+            width = 900 - margin.left - margin.right,
+            height = 300 - margin.top - margin.bottom;
 
         // append the svg object to the body of the page
-        var svg = d3.select("#my_dataviz")
+        let svg = d3.select("#lineChart")
             .append("svg")
             .attr("width", width + margin.left + margin.right)
             .attr("height", height + margin.top + margin.bottom)
@@ -47,21 +54,29 @@
                 "translate(" + margin.left + "," + margin.top + ")");
 
         // Initialise a X axis:
-        var x = d3.scaleTime()
+        let x = d3.scaleTime()
             .domain(d3.extent(data1, function(d) { return d.x; }))
             .range([ 0, width ]);
 
-        var xAxis = d3.axisBottom().scale(x);
+        let xAxis = d3.axisBottom()
+            .scale(x)
+            .ticks(30)
+            .tickFormat(d3.timeFormat("%m-%d"));
 
-        svg.append("g")
+        let XAxis = svg.append("g")
             .attr("transform", "translate(0," + height + ")")
             .attr("class", "myXaxis")
             .call(d3.axisBottom(x));
+
+        XAxis.selectAll(".tick text")
+            .style("text-anchor", "start")   // Align text so it does not overlap the ticks
+            .attr("dy", "2.0em") 
+            .attr("dx", "-1.0em"); 
                 
 
         // Initialize an Y axis
-        var y = d3.scaleLinear().range([height, 0]);
-        var yAxis = d3.axisLeft().scale(y);
+        let y = d3.scaleLinear().range([height, 0]);
+        let yAxis = d3.axisLeft().scale(y);
         svg.append("g")
             .attr("class", "myYaxis")
 
@@ -69,7 +84,7 @@
         function update(data) {
 
             // Create the X axis:
-            x.domain([0, d3.max(data, function (d) { return d.x })]);
+            x.domain(d3.extent(data, function (d) { return d.x }));
             svg.selectAll(".myXaxis").transition()
                 .duration(1000)
                 .call(xAxis);
@@ -82,12 +97,11 @@
                 .call(yAxis);
 
             // Create a update selection: bind to the new data
-            var u = svg.selectAll(".lineTest")
+            let u = svg.selectAll(".lineTest")
                 .data([data], function (d) { return d.x });
 
             // Updata the line
-            u
-                .enter()
+            u.enter()
                 .append("path")
                 .attr("class", "lineTest")
                 .merge(u)
@@ -105,5 +119,129 @@
         // At the beginning, I run the update function on the first dataset:
         update(data1)
 
+    </script> *@
+
+    <script type="text/javascript">
+
+        let data = @Html.Raw(Json.Serialize(Model.HeatMapPoints));
+
+        const mapperFunction2 = (d) => {
+            return { x: new Date(d.x).toLocaleDateString(), y: d.y, value: d.value }
+        }
+
+        data = data.map(mapperFunction2)
+
+          let margin2 = {top: 30, right: 30, bottom: 30, left: 30},
+          width2 = 900 - margin2.left - margin2.right,
+          height2 = 900 - margin2.top - margin2.bottom;
+
+        // append the svg object to the body of the page
+        let svg2 = d3.select("#heatMap")
+        .append("svg")
+          .attr("width", width2 + margin2.left + margin2.right)
+          .attr("height", height2 + margin2.top + margin2.bottom)
+        .append("g")
+          .attr("transform",
+                "translate(" + margin2.left + "," + margin2.top + ")");
+
+        // Labels of row and columns
+        let myGroups = [...new Set(data.map(x => x.x))];
+        let myVars = [...new Set(data.map(x => x.y))];
+
+        // Build X scales and axis:
+        let x2 = d3.scaleBand()
+          .range([ 0, width2 ])
+          .domain(myGroups)
+          .padding(0.01);
+
+        svg2.append("g")
+          .attr("transform", "translate(0," + height2 + ")")
+          .call(d3.axisBottom(x2))
+
+        // Build X scales and axis:
+        let y2 = d3.scaleBand()
+          .range([ height2, 0 ])
+          .domain(myVars)
+          .padding(0.01);
+
+        svg2.append("g")
+          .call(d3.axisLeft(y2));
+
+        // Build color scale
+        let myColor = d3.scaleLinear()
+            .range(["white", "#cce5df"])
+            .domain([1, 3]);
+
+        //Read the data
+          svg2.selectAll()
+              .data(data)
+              .enter()
+              .append("rect")
+              .attr("x", function(d) { return x2(d.x) })
+              .attr("y", function(d) { return y2(d.y) })
+              .attr("width", x2.bandwidth() )
+              .attr("height", y2.bandwidth() )
+              .style("fill", d => myColor(d.value))
+
+        // Set the dimensions and margins of the graph
+        // const margin = { top: 30, right: 30, bottom: 30, left: 30 },
+        //     width = 450 - margin.left - margin.right,
+        //     height = 450 - margin.top - margin.bottom;
+
+        // Append the SVG object to the body of the page
+    //     const svg = d3.select("#heatMap")
+    //         .append("svg")
+    //         .attr("width", width + margin.left + margin.right)
+    //         .attr("height", height + margin.top + margin.bottom)
+    //         .append("g")
+    //         .attr("transform",
+    //             `translate(${margin.left},${margin.top})`);
+
+    //     // Create dummy data
+    //     const data = [];
+    //     const gridSize = 5;
+    //     for (let i = 0; i < gridSize; i++) {
+    //         for (let j = 0; j < gridSize; j++) {
+    //             data.push({ x: i, y: j, value: Math.floor(Math.random() * 100) });
+    //         }
+    //     }
+
+    //     // Build X scales and axis:
+    //     const x = d3.scaleBand()
+    //         .range([0, width])
+    //         .domain(d3.range(gridSize))
+    //         .padding(0.05);
+
+    //     // Build Y scales and axis:
+    //     const y = d3.scaleBand()
+    //         .range([height, 0])
+    //         .domain(d3.range(gridSize))
+    //         .padding(0.05);
+
+    //     // Build color scale
+    //     const colorScale = d3.scaleSequential(d3.interpolateInferno)
+    //         .domain([0, 100]);  // Adjust domain as needed for your data
+
+    //     // Add rectangles
+    //     svg.selectAll()
+    //         .data(data)
+    //         .enter()
+    //         .append("rect")
+    //         .attr("x", d => x(d.x))
+    //         .attr("y", d => y(d.y))
+    //         .attr("width", x.bandwidth())
+    //         .attr("height", y.bandwidth())
+    //         .style("fill", d => colorScale(d.value));
+
+    //     // Add X axis
+    //     svg.append("g")
+    //         .attr("transform", `translate(0,${height})`)
+    //         .call(d3.axisBottom(x).tickSize(0))
+    //         .select(".domain").remove();
+
+    //     // Add Y axis
+    //     svg.append("g")
+    //         .call(d3.axisLeft(y).tickSize(0))
+    //         .select(".domain").remove();
     </script>
 }
