--- a/NCloud/NCloud/Views/Admin/Monitoring.cshtml
+++ b/NCloud/NCloud/Views/Admin/Monitoring.cshtml
@@ -27,7 +27,7 @@
 
 
 @section Scripts {
-@*     <script type="text/javascript">
+    <script type="text/javascript">
 
         // Create 2 datasets
         let data1 = @Html.Raw(Json.Serialize(Model.LineGraphPoints));
@@ -119,7 +119,7 @@
         // At the beginning, I run the update function on the first dataset:
         update(data1)
 
-    </script> *@
+    </script>
 
     <script type="text/javascript">
 
@@ -170,78 +170,17 @@
         // Build color scale
         let myColor = d3.scaleLinear()
             .range(["white", "#cce5df"])
-            .domain([1, 3]);
+            .domain([1, d3.max(data, function (d) { return d.value })]);
 
         //Read the data
-          svg2.selectAll()
-              .data(data)
-              .enter()
-              .append("rect")
-              .attr("x", function(d) { return x2(d.x) })
-              .attr("y", function(d) { return y2(d.y) })
-              .attr("width", x2.bandwidth() )
-              .attr("height", y2.bandwidth() )
-              .style("fill", d => myColor(d.value))
-
-        // Set the dimensions and margins of the graph
-        // const margin = { top: 30, right: 30, bottom: 30, left: 30 },
-        //     width = 450 - margin.left - margin.right,
-        //     height = 450 - margin.top - margin.bottom;
-
-        // Append the SVG object to the body of the page
-    //     const svg = d3.select("#heatMap")
-    //         .append("svg")
-    //         .attr("width", width + margin.left + margin.right)
-    //         .attr("height", height + margin.top + margin.bottom)
-    //         .append("g")
-    //         .attr("transform",
-    //             `translate(${margin.left},${margin.top})`);
-
-    //     // Create dummy data
-    //     const data = [];
-    //     const gridSize = 5;
-    //     for (let i = 0; i < gridSize; i++) {
-    //         for (let j = 0; j < gridSize; j++) {
-    //             data.push({ x: i, y: j, value: Math.floor(Math.random() * 100) });
-    //         }
-    //     }
-
-    //     // Build X scales and axis:
-    //     const x = d3.scaleBand()
-    //         .range([0, width])
-    //         .domain(d3.range(gridSize))
-    //         .padding(0.05);
-
-    //     // Build Y scales and axis:
-    //     const y = d3.scaleBand()
-    //         .range([height, 0])
-    //         .domain(d3.range(gridSize))
-    //         .padding(0.05);
-
-    //     // Build color scale
-    //     const colorScale = d3.scaleSequential(d3.interpolateInferno)
-    //         .domain([0, 100]);  // Adjust domain as needed for your data
-
-    //     // Add rectangles
-    //     svg.selectAll()
-    //         .data(data)
-    //         .enter()
-    //         .append("rect")
-    //         .attr("x", d => x(d.x))
-    //         .attr("y", d => y(d.y))
-    //         .attr("width", x.bandwidth())
-    //         .attr("height", y.bandwidth())
-    //         .style("fill", d => colorScale(d.value));
-
-    //     // Add X axis
-    //     svg.append("g")
-    //         .attr("transform", `translate(0,${height})`)
-    //         .call(d3.axisBottom(x).tickSize(0))
-    //         .select(".domain").remove();
-
-    //     // Add Y axis
-    //     svg.append("g")
-    //         .call(d3.axisLeft(y).tickSize(0))
-    //         .select(".domain").remove();
+        svg2.selectAll()
+            .data(data)
+            .enter()
+            .append("rect")
+            .attr("x", function (d) { return x2(d.x) })
+            .attr("y", function (d) { return y2(d.y) })
+            .attr("width", x2.bandwidth())
+            .attr("height", y2.bandwidth())
+            .style("fill", d => myColor(d.value));
     </script>
 }
