--- a/NCloud/NCloud/Views/Admin/Monitoring.cshtml
+++ b/NCloud/NCloud/Views/Admin/Monitoring.cshtml
@@ -48,7 +48,7 @@
             .append("svg")
             .attr("width", width + margin.left + margin.right)
             .attr("height", height + margin.top + margin.bottom)
-            .attr("fill", "#cce5df")
+            .attr("fill", "#0d6efd")
             .append("g")
             .attr("transform",
                 "translate(" + margin.left + "," + margin.top + ")");
@@ -215,7 +215,7 @@
 
         // Build color scale
         let myColor = d3.scaleLinear()
-            .range(["white", "#cce5df"])
+            .range(["white", "#0d6efd"])
             .domain([0,d3.max(data, function (d) { return d.value })]);
 
         //Read the data
