bugfix for gitignore

--- a/NCloud/NCloud/Views/Editor/TextEditor.cshtml
+++ b/NCloud/NCloud/Views/Editor/TextEditor.cshtml
@@ -42,6 +42,17 @@
     <script type="text/javascript" src="/js/editor.js"></script>
   
     <script type="text/javascript">
+
+        function SaveKeyCombination(event){
+            if ((event.ctrlKey || event.metaKey) && event.key === 's') {
+                
+                event.preventDefault();
+
+                UserSave('@Model.FilePath',tinymce.get('texteditor').getContent(),'@Model.Encoding','@Url.Action("SaveData", "Editor" )')            
+            }
+        }
+
+
         tinymce.init({
             selector: '#texteditor',
             theme: "silver",
@@ -54,14 +65,16 @@
             branding: false,
             promotion: false,
             toolbar: "aligncenter alignjustify alignleft alignnone alignright| anchor | blockquote blocks | backcolor | bold | copy | cut | fontfamily fontsize forecolor h1 h2 h3 h4 h5 h6 hr indent | italic | language | lineheight | newdocument | outdent | paste pastetext | print | redo | remove removeformat | selectall | strikethrough | styles | subscript superscript underline | undo | visualaid | a11ycheck advtablerownumbering typopgraphy anchor restoredraft casechange charmap checklist code codesample addcomment showcomments ltr rtl editimage fliph flipv imageoptions rotateleft rotateright emoticons export footnotes footnotesupdate formatpainter fullscreen help image insertdatetime link openlink unlink bullist numlist media mergetags mergetags_list nonbreaking pagebreak pageembed permanentpen preview quickimage quicklink quicktable cancel save searchreplace spellcheckdialog spellchecker | table tablecellprops tablecopyrow tablecutrow tabledelete tabledeletecol tabledeleterow tableinsertdialog tableinsertcolafter tableinsertcolbefore tableinsertrowafter tableinsertrowbefore tablemergecells tablepasterowafter tablepasterowbefore tableprops tablerowprops tablesplitcells tableclass tablecellclass tablecellvalign tablecellborderwidth tablecellborderstyle tablecaption tablecellbackgroundcolor tablecellbordercolor tablerowheader tablecolheader | tableofcontents tableofcontentsupdate | template typography | insertfile | visualblocks visualchars | wordcount",
+            license_key: 'gpl',
+            setup: (editor) => {
+                editor.on('keydown', (event) => {
+                    SaveKeyCombination(event);
+                });
+            }
         });
 
         document.addEventListener('keydown', function (event) {
-            if ((event.ctrlKey || event.metaKey) && event.key === 's') {
-                
-                event.preventDefault();
-
-                UserSave('@Model.FilePath',tinymce.get('texteditor').getContent(),'@Model.Encoding','@Url.Action("SaveData", "Editor" )')            }
+            SaveKeyCombination(event);
         });
     </script>
 
