small UI fixes, for Admin pages

--- a/NCloud/NCloud/wwwroot/css/site.css
+++ b/NCloud/NCloud/wwwroot/css/site.css
@@ -205,6 +205,10 @@ details[open] summary:before {
     padding: 20px 0;
 }
 
+.middle-justification {
+    align-items: center;
+}
+
 .card-block {
     padding: 1.25rem;
 }
