--- a/NCloud/NCloud/Views/Admin/Monitoring.cshtml
+++ b/NCloud/NCloud/Views/Admin/Monitoring.cshtml
@@ -11,18 +11,26 @@
 
 <script src="/lib/d3/d3.v7.min.js"></script>
 
-<div class="my-5">
-    <h2>Last 30 days login frequency</h2>
-</div>
-<div class="d-flex w-100 justify-content-center my-5">
-    <div id="lineChart"></div>
+<div class="card">
+  <div class="card-body">
+    <div class="my-5">
+        <h2>Last 30 days login frequency</h2>
+    </div>
+    <div class="d-flex w-100 justify-content-center my-5">
+        <div id="lineChart"></div>
+    </div>
+  </div>
 </div>
 
-<div class="my-5">
-    <h2>Last 7 days login frequency / hour</h2>
-</div>
-<div class="d-flex w-100 justify-content-center my-5">
-    <div id="heatMap"></div>
+<div class="card mt-3">
+  <div class="card-body">
+    <div class="my-5">
+        <h2>Last 7 days login frequency / hour</h2>
+    </div>
+    <div class="d-flex w-100 justify-content-center my-5">
+        <div id="heatMap"></div>
+    </div>
+  </div>
 </div>
 
 
