--- a/NCloud/NCloud/Views/UserManagement/UserPage.cshtml
+++ b/NCloud/NCloud/Views/UserManagement/UserPage.cshtml
@@ -28,11 +28,13 @@
                 <div class="card user-card-full">
                     <div class="row m-l-0 m-r-0  background-color border border-primary border-4 rounded rounded-3">
                         <div class="col-sm-4 background-color user-profile">
-                            <div class="card-block text-center text-white">
-                                <div class="m-b-25">
-                                    <img src="/utilities/person-circle.svg" class="img-radius" alt="User-Profile-Image" width="100" height="100">
+                            <div class="d-flex text-center text-white h-100 middle-justification">
+                                <div class="d-block w-100 p-3">
+                                    <div class="m-b-25">
+                                        <img src="/utilities/person-circle.svg" class="img-radius" alt="User-Profile-Image" width="100" height="100">
+                                    </div>
+                                    <h6 class="f-w-600 border border-3 border-light rounded-3 py-2 text-wrap">@Model.FullName</h6>
                                 </div>
-                                <h6 class="f-w-600 border border-3 border-light rounded-3 py-2 text-wrap">@Model.FullName</h6>
                             </div>
                         </div>
                         <div class="col-sm-8 bg-light text-dark">
